--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+server.port=8081
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
+
+spring.datasource.url=jdbc:h2:file:~/projet;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
